# flutter_local_notifications

./: .cirrus.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analysis_options.yaml  melos.yaml  pubspec.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  issue.md  standard-issue-template.md
.github/workflows/: dart.yml  format.yml  publish.yml  validate.yml
android/: build.gradle  settings.gradle
example/: analysis_options.yaml  pubspec.yaml
example/android/: build.gradle
example/ios/: .gitignore  Podfile
example/lib/: main.dart  second_page.dart
example/test/: widget_test.dart
flutter_local_notifications/: .gitignore  Android.md  AndroidGrouping.md  AppleConfiguration.md  AppleRequestPermissions.md  CHANGELOG.md  IOS.md  IOSGrouping.md  README.md  analysis_options.yaml  pubspec.yaml
flutter_local_notifications/android/: .project  build.gradle  gradle.properties  settings.gradle
flutter_local_notifications/docs/: android-setup.md  android-usage.md  android.md  cross-platform-usage.md  darwin-usage.md  ios-setup.md  linux-usage.md  usage.md  windows-setup.md  windows-usage.md
flutter_local_notifications/example/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
flutter_local_notifications/ios/: flutter_local_notifications.podspec  flutter_local_notifications_plus.podspec
flutter_local_notifications/lib/: flutter_local_notifications.dart
flutter_local_notifications/linux/: CMakeLists.txt  flutter_local_notifications_plugin.cc
flutter_local_notifications/macos/: flutter_local_notifications.podspec
flutter_local_notifications/pigeon/: android.dart  temp.dart
flutter_local_notifications/test/: android_custom_notification_view_integration_test.dart  android_flutter_local_notifications_test.dart  flutter_local_notifications_e2e.dart  flutter_local_notifications_test.dart  ios_flutter_local_notifications_test.dart  macos_flutter_local_notifications_test.dart  platform_flutter_local_notifications_test.dart
flutter_local_notifications/windows/: CMakeLists.txt  DesktopNotificationManagerCompat.cpp  DesktopNotificationManagerCompat.h  __flutter_local_notifications_plugin.cpp  flutter_local_notifications.cpp  flutter_local_notifications.h  flutter_local_notifications_plugin.cpp  methods.cpp  methods.h  registration.cpp  registration.h  types.h  utils.h
flutter_local_notifications/windows/include/flutter_local_notifications/: flutter_local_notifications_plugin.h  methods.h
flutter_local_notifications/windows/utils/: utils.cpp  utils.h
flutter_local_notifications_linux/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
flutter_local_notifications_linux/lib/: flutter_local_notifications_linux.dart
flutter_local_notifications_linux/test/: notification_manager_test.dart  notification_manager_test.mocks.dart  notifications_manager_test.dart  notifications_manager_test.mocks.dart  posix_test.dart  storage_test.dart  storage_test.mocks.dart
flutter_local_notifications_platform_interface/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
flutter_local_notifications_platform_interface/lib/: flutter_local_notifications_platform_interface.dart  method_channel_flutter_local_notifications.dart
flutter_local_notifications_web/: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
flutter_local_notifications_web/assets/: flutter_local_notifications_web.js
flutter_local_notifications_windows/: .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  build.bat  dart_test.yaml  ffigen.yaml  pubspec.yaml
flutter_local_notifications_windows/src/: .clang-format  CMakeLists.txt  ffi_api.cpp  ffi_api.h  flutter_local_notifications_windows.c  plugin.cpp  plugin.hpp  registration.cpp  registration.hpp  utils.cpp  utils.hpp
ios/Classes/: NSArrayMap.h  (+7 more)
lib/: flutter_local_notifications.dart  initialization_settings.dart  notification_details.dart
test/: flutter_local_notifications_test.dart
(+464 files in other folders)
